# snitch_cluster

./: .clang-format  .clang-format-ignore  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .rtlbinary  404.html  Bender.local  Bender.yml  CONTRIBUTING.md  Doxyfile  FindNonResettableFFs.py  Makefile  README.md  REUSE.toml  apt-requirements.txt  doxybook2.json  iis-setup.sh  index.html  math  mkdocs.yml  objects.inv  pixi.toml  publications.html  pyproject.toml  python-requirements.txt  snax_Bender.yml  softmax.py  sys
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
cfg/: .gitignore  default.json  dma_mchan.json  frep_xl.json  frep_xs.json  github-ci.json  mempool.json  omega.json  ownmuldiv.json  postincr.json  xpulpv2.json  yosys-ci.json
docs/: Doxyfile  index.md  publications.md  requirements.txt
hw/: README.md
logs/: dma_00008_perf.json  hart_00000_perf.json  hart_00001_perf.json  hart_00002_perf.json  hart_00003_perf.json  hart_00004_perf.json  hart_00005_perf.json  hart_00006_perf.json  hart_00007_perf.json  hart_00008_perf.json  trace_hart_00000.dasm  trace_hart_00000.s  trace_hart_00000.txt  trace_hart_00001.dasm  trace_hart_00001.s  trace_hart_00001.txt  trace_hart_00002.dasm  trace_hart_00002.s  trace_hart_00002.txt  trace_hart_00003.dasm  trace_hart_00003.s  trace_hart_00003.txt  trace_hart_00004.dasm  trace_hart_00004.s  trace_hart_00004.txt  trace_hart_00005.dasm  trace_hart_00005.s  trace_hart_00005.txt  trace_hart_00006.dasm  trace_hart_00006.s  trace_hart_00006.txt  trace_hart_00007.dasm  trace_hart_00007.s  trace_hart_00007.txt  trace_hart_00008.dasm  trace_hart_00008.s  trace_hart_00008.txt
make/: common.mk  gvsoc.mk  rtl.mk  sw.mk  traces.mk  vcs.mk  verilator.mk  vsim.mk
rm/: custom_instructions.html  peripherals.html  reqrsp_interface.html  snitch.html  snitch_cluster.html
schema/: snitch_cluster.schema.json
schema-doc/: address_range-properties-address.html  address_range-properties-length.html  address_range.html  axi_tlb-properties-l1_cut_ax.html  axi_tlb-properties-l1_num_entries.html  axi_tlb-properties-max_trans.html  axi_tlb.html  axi_xbar-properties-fall_through.html  axi_xbar-properties-max_mst_trans.html  axi_xbar-properties-max_slv_trans.html  axi_xbar.html  occamy-properties-configuration-of-external-hbm-interface-properties-address_1.html  occamy-properties-configuration-of-external-hbm-interface-properties-address_2.html  occamy-properties-configuration-of-external-hbm-interface-properties-cfg_regions.html  occamy-properties-configuration-of-external-hbm-interface-properties-channel_size.html  occamy-properties-configuration-of-external-hbm-interface-properties-nr_channels_address_0.html  occamy-properties-configuration-of-external-hbm-interface-properties-nr_channels_total.html  occamy-properties-configuration-of-external-hbm-interface.html  occamy-properties-configuration-of-external-pcie-port-properties-address_io.html  occamy-properties-configuration-of-external-pcie-port-properties-address_mm.html  occamy-properties-configuration-of-external-pcie-port-properties-length.html  occamy-properties-configuration-of-external-pcie-port.html  occamy-properties-is_remote_quadrant.html  occamy-properties-narrow_xbar_slv_id_width.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow_wide.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-hbmx_to_hbm.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-inter_to_quad.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_hbi.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_pcie.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_wide.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow_pre.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_to_cva6.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_to_quad.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_bootrom_cfg.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_chip_ctrl_cfg.html  occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_clint_cfg.html  (+178 more)
sw/: .gitignore  README.md  toolchain.mk
(+1533 files in other folders)
