# Copyright 2023 ETH Zurich and University of Bologna.
# Solderpad Hardware License, Version 0.51, see LICENSE for details.
# SPDX-License-Identifier: SHL-0.51

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "snitch"
authors = [
    {name = "Luca Colagrande", email = "colluca@iis.ee.ethz.ch"}
]
dynamic = ["version"]
dependencies = [
    # Alphabetically sorted.
    "dataclasses",
    "flake8",
    "gitpython",
    "humanize",
    "json5",
    "jsonref",
    "jsonschema",
    "mako",
    "matplotlib",
    "pandas",
    "peakrdl",
    "peakrdl-markdown",
    "peakrdl-rawheader@git+https://github.com/colluca/PeakRDL-rawheader.git@7b8dbc9ad5854dc1cdaf36d4ea024c29ffb00a4c",
    "prettytable",
    "progressbar2",
    "psutil",
    "pyelftools",
    "pyflexfloat",
    "pymakeutils",
    "pytablewriter",
    "pytest",
    "pyyaml",
    "tabulate",
    "termcolor",
    "yamllint"
]

[project.optional-dependencies]
kernels  = [
    # Alphabetically sorted.
    "numpy",
    "scikit-learn",
    "torch",
]
docs = [
    "mkdocs",
    "mkdocs-exclude",
    "mkdocs-include-markdown-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
]
all = [
    "snitch[kernels,docs]"
]

[tool.setuptools.package-dir]
"snitch.dnn" = "sw/kernels/dnn"
"snitch.blas" = "sw/kernels/blas"
"snitch.util" = "util"
"snitch.nonfree" = "nonfree/util"
